--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ strum = { version = "0.27.2", features = ["derive"] }
 quote = "1.0.41"
 proc-macro2 = "1.0.101"
 itertools = "0.14.0"
+anyhow = "1.0.100"
 
 [dev-dependencies]
 anyhow = "1.0.100"
